--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@ Contributor(s): .
     <artifactId>drombler-commons</artifactId>
     <packaging>pom</packaging>
 
-    <name>Drombler Commons - All</name>
+    <name>Drombler Commons</name>
     <description>Drombler Commons is a collection of reusable libraries and frameworks. You can use this POM file e.g. 
         in your dependencyManagement section to manage your Drombler Commons dependencies.</description>
     <inceptionYear>2012</inceptionYear>
