--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-parent/pom.xml
@@ -41,7 +41,7 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.fx.samples.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
