--- a/drombler-commons-action/drombler-commons-action-fx/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-fx/pom.xml
@@ -40,7 +40,7 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.parent.url}/drombler-commons-action/${project.artifactId}/</url>
         </site>
     </distributionManagement>
