--- a/drombler-commons-action/pom.xml
+++ b/drombler-commons-action/pom.xml
@@ -41,7 +41,7 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.parent.url}/drombler-commons-action/</url>
         </site>
     </distributionManagement>
