--- a/drombler-commons-client/drombler-commons-client-parent/pom.xml
+++ b/drombler-commons-client/drombler-commons-client-parent/pom.xml
@@ -42,7 +42,7 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.client.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
