--- a/drombler-commons-client/pom.xml
+++ b/drombler-commons-client/pom.xml
@@ -39,7 +39,7 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.client.parent.url}/</url>
         </site>
     </distributionManagement>
