--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-time/pom.xml
@@ -34,7 +34,7 @@ Contributor(s): .
 
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.fx.samples.ensemble.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
