--- a/drombler-commons-fx/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-time/pom.xml
@@ -43,7 +43,7 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.fx.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
