--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -62,7 +62,8 @@ Contributor(s): .
         <scm.parent.developerConnection>scm:git:git@github.com:Drombler/drombler-commons.git</scm.parent.developerConnection>
         <scm.parent.url>https://github.com/Drombler/drombler-commons</scm.parent.url>
         <!-- URL to use with the standard site plugin with the git wagon -->
-        <distributionManagement.parent.url>github:https://drombler.github.io/drombler-commons/${project.version}/docs/site</distributionManagement.parent.url>
+        <distributionManagement.base.url>github:http://drombler.github.io/drombler-commons/${project.version}</distributionManagement.base.url>
+        <distributionManagement.parent.url>${distributionManagement.base.url}/docs/site</distributionManagement.parent.url>
         <!-- URL to use with the GitHub site plugin -->
         <!--<distributionManagement.parent.url>${project.version}/docs/site</distributionManagement.parent.url>-->
         <excludePackageNamesAggregate>${excludePackageNames}:*.maven.plugin.*:*.samples.*:org.drombler.commons.iso</excludePackageNamesAggregate>
