--- a/drombler-commons-logging-slf4j-cdi/pom.xml
+++ b/drombler-commons-logging-slf4j-cdi/pom.xml
@@ -27,7 +27,7 @@
     
     <distributionManagement>
         <site>
-            <id>drombler.sourceforge.net</id>
+            <id>github</id>
             <url>${distributionManagement.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
