--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
@@ -107,6 +107,11 @@ Contributor(s): .
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-docking-fx-context</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <scope>runtime</scope>
