--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@ Contributor(s): .
         <module>drombler-commons-parent</module>
         <module>drombler-commons-action</module>
         <module>drombler-commons-context</module>
+        <module>drombler-commons-docking</module>
         <module>drombler-commons-fx</module>
         <module>drombler-commons-client</module>
         <module>drombler-commons-iso</module>
@@ -93,6 +94,13 @@ Contributor(s): .
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-client</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-docking</artifactId>
                 <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
