--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
@@ -98,6 +98,11 @@ Contributor(s): .
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-commons-action-command</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-context</artifactId>
             <version>${project.version}</version>
         </dependency>
