--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
@@ -26,7 +26,7 @@ Contributor(s): .
 
     <name>Drombler Commons - FX - Samples - Context</name>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/DromblerCommons/${project.version}/docs/site</url>
+    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
@@ -108,7 +108,7 @@ Contributor(s): .
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>drombler-commons-fx-docking</artifactId>
+            <artifactId>drombler-commons-docking-fx</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
