--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler</groupId>
         <artifactId>drombler-oss-parent</artifactId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
         <relativePath />
     </parent>
     <groupId>org.drombler.commons</groupId>
