--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /drombler-commons-docking/drombler-commons-docking-core/target/
 /drombler-commons-docking/drombler-commons-docking-spi/target/
 /drombler-commons-docking/drombler-commons-docking-fx/target/
+/drombler-commons-docking/drombler-commons-docking-context/target/
+/drombler-commons-data/target/
