#186 Deactivate OSGi bundles properly - DataHandlerRegistry added

--- a/drombler-commons-action/drombler-commons-action-core/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-core/pom.xml
@@ -65,5 +65,12 @@ Contributor(s): .
             </plugin>
         </plugins>
     </build>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-beans</artifactId>
+        </dependency>
+    </dependencies>
    
 </project>
