--- a/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.properties
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/main/resources/org/drombler/commons/fx/scene/control/impl/skin/ProgressMonitorContentPane.properties
@@ -1,2 +1,2 @@
 moreWorkersIndicatorLabel.textFormat=({0,number,integer} more...)
-cancelButton.tooltip=Click to cancel worker
+cancelButton.tooltip=Click to cancel the task
