--- a/drombler-commons-fx/drombler-commons-fx-core/src/test/resources/test/logging.properties
+++ b/drombler-commons-fx/drombler-commons-fx-core/src/test/resources/test/logging.properties
@@ -11,5 +11,5 @@ java.util.logging.SimpleFormatter.format=%1$tF %1$tT %4$S %2$s - %5$s%6$s%n
 
 
 org.drombler.commons.level = INFO
-org.drombler.commons.fx.scene.control.impl.skin.ProgressMonitorPopupContentPane.level = FINE
+org.drombler.commons.fx.scene.control.impl.skin.WorkersPopupContentPane.level = FINE
 
