--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /drombler-commons-docking/drombler-commons-docking-fx/target/
 /drombler-commons-docking/drombler-commons-docking-context/target/
 /drombler-commons-data/target/
+/drombler-commons-action/drombler-commons-action-context/target/
