drombler-commons-action-fx-context module added

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /drombler-commons-docking/drombler-commons-docking-context/target/
 /drombler-commons-data/target/
 /drombler-commons-action/drombler-commons-action-context/target/
+/drombler-commons-action/drombler-commons-action-fx-context/target/
