--- a/drombler-commons-action/pom.xml
+++ b/drombler-commons-action/pom.xml
@@ -71,6 +71,7 @@ Contributor(s): .
         <module>drombler-commons-action-context</module>
         <module>drombler-commons-action-command</module>
         <module>drombler-commons-action-fx</module>
+        <module>drombler-commons-action-fx-context</module>
     </modules>
     
     <dependencyManagement>
@@ -93,6 +94,11 @@ Contributor(s): .
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-action-fx</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-action-fx-context</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
