--- a/drombler-commons-action/drombler-commons-action-fx-context/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-fx-context/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-        COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Notice
+         COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Notice
 
-The contents of this file are subject to the COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL)
-Version 1.0 (the "License"); you may not use this file except in
-compliance with the License. A copy of the License is available at
-http://www.opensource.org/licenses/cddl1.txt
+ The contents of this file are subject to the COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL)
+ Version 1.0 (the "License"); you may not use this file except in
+ compliance with the License. A copy of the License is available at
+ http://www.opensource.org/licenses/cddl1.txt
 
-The Original Code is Drombler.org. The Initial Developer of the
-Original Code is Florian Brunner (Sourceforge.net user: puce).
-Copyright 2012 Drombler.org. All Rights Reserved.
+ The Original Code is Drombler.org. The Initial Developer of the
+ Original Code is Florian Brunner (GitHub user: puce77).
+ Copyright 2018 Drombler.org. All Rights Reserved.
 
-Contributor(s): .
+ Contributor(s): .
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
