--- a/drombler-commons-client/pom.xml
+++ b/drombler-commons-client/pom.xml
@@ -17,7 +17,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-client-parent</artifactId>
-        <version>0.11</version>
+        <version>0.12-SNAPSHOT</version>
         <relativePath>drombler-commons-client-parent/pom.xml</relativePath>
     </parent>
     
