--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@ Contributor(s): .
     <modules>
         <module>drombler-commons-parent</module>
         <module>drombler-commons-action</module>
+        <module>drombler-commons-settings</module>
         <module>drombler-commons-context</module>
         <module>drombler-commons-data</module>
         <module>drombler-commons-docking</module>
@@ -88,6 +89,13 @@ Contributor(s): .
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-action</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-settings</artifactId>
                 <version>${project.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
