#215 Provide a Settings Framework - initial Settings Framework

--- a/drombler-commons-settings/drombler-commons-settings-core/pom.xml
+++ b/drombler-commons-settings/drombler-commons-settings-core/pom.xml
@@ -66,5 +66,11 @@ Contributor(s): .
         </plugins>
     </build>
     
+    <dependencies>
+        <dependency>
+            <groupId>org.softsmithy.lib</groupId>
+            <artifactId>softsmithy-lib-core</artifactId>
+        </dependency>
+    </dependencies>
    
 </project>
