--- a/drombler-commons-client/pom.xml
+++ b/drombler-commons-client/pom.xml
@@ -68,6 +68,7 @@ Contributor(s): .
     <modules>
         <module>drombler-commons-client-parent</module>
         <module>drombler-commons-client-core</module>
+        <module>drombler-commons-client-startup-main</module>
     </modules>
     
     <dependencyManagement>
@@ -75,6 +76,11 @@ Contributor(s): .
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-client-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-client-startup-main</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
