Command Line Switches

--- a/drombler-commons-client/drombler-commons-client-startup-main/src/main/resources/org/drombler/commons/client/startup/main/config.properties
+++ b/drombler-commons-client/drombler-commons-client-startup-main/src/main/resources/org/drombler/commons/client/startup/main/config.properties
@@ -14,4 +14,5 @@
 
 org.osgi.framework.system.packages.extra=${drombler.commons.client.startup.packages}
 
-drombler.commons.client.startup.packages=org.drombler.commons.client.startup.main;version="${drombler.commons.osgi.version.clean}"
+drombler.commons.client.startup.packages=org.drombler.commons.client.startup.main;version="${drombler.commons.osgi.version.clean}", \
+org.drombler.commons.client.startup.main.cli;version="${drombler.commons.osgi.version.clean}"
