--- a/drombler-commons-action/drombler-commons-action-fx/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-fx/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.12</version>
+        <version>0.13-SNAPSHOT</version>
         <relativePath>../../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-action-fx</artifactId>
