--- a/drombler-commons-fx/drombler-commons-fx-core/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-core/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-fx-parent</artifactId>
-        <version>0.12</version>
+        <version>0.13-SNAPSHOT</version>
         <relativePath>../drombler-commons-fx-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-core</artifactId>
