--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,8 @@ Contributor(s): .
                 <groupId>${project.groupId}</groupId>
                 <artifactId>drombler-commons-data</artifactId>
                 <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
