--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
@@ -18,7 +18,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-fx-samples-parent</artifactId>
-        <version>0.12-SNAPSHOT</version>
+        <version>0.13-SNAPSHOT</version>
         <relativePath>../drombler-commons-fx-samples-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-samples-context</artifactId>
@@ -74,6 +74,7 @@ Contributor(s): .
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.7.1-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <id>jar</id>
@@ -82,6 +83,7 @@ Contributor(s): .
                         </goals>
                         <configuration>
                             <mainClass>org.drombler.commons.fx.samples.context.ContextSampleApplication</mainClass>
+                            <updateExistingJar>true</updateExistingJar>
                         </configuration>
                     </execution>
                 </executions>
