plugin management: gitflow-maven-plugin: verbose = true

--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -87,6 +87,7 @@ Contributor(s): .
                     <artifactId>gitflow-maven-plugin</artifactId>
                     <version>1.10.0</version>
                     <configuration>
+                        <verbose>true</verbose>
                         <gitFlowConfig>
                             <versionTagPrefix>release-</versionTagPrefix>
                         </gitFlowConfig>
