- spring modules added

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /drombler-commons-settings/drombler-commons-settings-core/target/
 /drombler-commons-settings/drombler-commons-settings-fx/target/
 /drombler-commons-client/drombler-commons-client-startup-main/target/
+/drombler-commons-spring/drombler-commons-spring-jpa/target/
+/drombler-commons-spring/drombler-commons-spring-core/target/
