--- a/drombler-commons-client/drombler-commons-client-core/pom.xml
+++ b/drombler-commons-client/drombler-commons-client-core/pom.xml
@@ -29,7 +29,7 @@ Contributor(s): .
     <description>Drombler Commons - Client - Core is a collection of utility classes and frameworks for client side development.</description>
     <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
