--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-ensemble/drombler-commons-fx-samples-ensemble-parent/pom.xml
@@ -30,7 +30,7 @@ Contributor(s): .
 
     <description>The parent POM of my drombler-commons-fx-samples-ensemble project. This drombler-commons-fx-samples-ensemble Parent POM should be the parent (either directly or indirectly) of every drombler-commons-fx-samples-ensemble project unless there is a good reason to do otherwise (in which case the reason should be documented).</description>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
     <inceptionYear>2012</inceptionYear>
     
     <scm>
@@ -44,7 +44,7 @@ Contributor(s): .
         <license>
             <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
             <distribution>repo</distribution>
-            <!--<url>http://java.sun.com/spl.html</url>-->
+            <!--<url>https://opensource.org/licenses/CDDL-1.0</url>-->
             <url>../../../../LICENSE.txt</url>
         </license>
     </licenses>
