--- a/drombler-commons-action/drombler-commons-action-core/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-core/pom.xml
@@ -29,7 +29,7 @@ Contributor(s): .
     <description>The core classes of the Action Framework.</description>
     <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
     
     <scm>
         <connection>${scm.connection}</connection>
