--- a/drombler-commons-action/drombler-commons-action-fx-context/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-fx-context/pom.xml
@@ -29,7 +29,7 @@
     <description>JavaFX specific Context Framework utility classes for the Action Framework.</description>
     <inceptionYear>2018</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
     
     <scm>
         <connection>${scm.connection}</connection>
