--- a/drombler-commons-data/drombler-commons-data-core/pom.xml
+++ b/drombler-commons-data/drombler-commons-data-core/pom.xml
@@ -14,7 +14,7 @@
     <description>Drombler Commons - Data Framework Core.</description>
     <inceptionYear>2016</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
