--- a/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/pom.xml
@@ -27,7 +27,7 @@ Contributor(s): .
     <description>Drombler Commons - FX - Samples is a collection of samples showing features of Drombler Commons - FX.</description>
     <inceptionYear>2014</inceptionYear>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
     
     <scm>
         <connection>${scm.connection}</connection>
@@ -47,7 +47,7 @@ Contributor(s): .
         <license>
             <name>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</name>
             <distribution>repo</distribution>
-            <!--<url>http://java.sun.com/spl.html</url>-->
+            <!--<url>https://opensource.org/licenses/CDDL-1.0</url>-->
             <url>../LICENSE.txt</url>
         </license>
     </licenses>
