--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-action/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-action/pom.xml
@@ -26,7 +26,7 @@ Contributor(s): .
 
     <name>Drombler Commons - FX - Samples - Action</name>
     <!-- required for Javadoc (apidocs) linking -->
-    <url>http://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
+    <url>https://www.drombler.org/drombler-commons/${project.version}/docs/site</url>
 
     <scm>
         <connection>${scm.connection}</connection>
