- Manifest: Automatic-Module-Name added

--- a/drombler-commons-data/drombler-commons-data-fx/pom.xml
+++ b/drombler-commons-data/drombler-commons-data-fx/pom.xml
@@ -48,6 +48,17 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
             </plugin>         
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>org.drombler.commons.data.fx</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     
