--- a/drombler-commons-docs/pom.xml
+++ b/drombler-commons-docs/pom.xml
@@ -21,7 +21,7 @@ Contributor(s): .
         <version>0.14-SNAPSHOT</version>
         <relativePath>../drombler-commons-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>drombler-fx-docs</artifactId>
+    <artifactId>drombler-commons-docs</artifactId>
     <packaging>bundle</packaging>
     
     <name>Drombler Commons - Docs</name>
@@ -59,6 +59,17 @@ Contributor(s): .
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>org.drombler.commons.docs</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
