--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /drombler-commons-client/drombler-commons-client-startup-main/target/
 /drombler-commons-spring/drombler-commons-spring-jpa/target/
 /drombler-commons-spring/drombler-commons-spring-core/target/
+/drombler-commons-spring/target/
