- sample refactoring - facility sample editors

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /drombler-commons-spring/drombler-commons-spring-jpa/target/
 /drombler-commons-spring/drombler-commons-spring-core/target/
 /drombler-commons-spring/target/
+/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/target/
