--- a/drombler-commons-spring/pom.xml
+++ b/drombler-commons-spring/pom.xml
@@ -75,12 +75,17 @@ Contributor(s): .
         <dependencies>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-spring-core</artifactId>
+                <artifactId>drombler-commons-spring-jpa</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>drombler-commons-spring-jpa</artifactId>
+                <artifactId>drombler-commons-spring-transaction</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>drombler-commons-spring-boot</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
