--- a/drombler-commons-action/drombler-commons-action-fx-context/pom.xml
+++ b/drombler-commons-action/drombler-commons-action-fx-context/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath>../../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-action-fx-context</artifactId>
@@ -87,6 +87,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-context</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <scope>provided</scope>
+            <version>${dependency.javafx.version}</version>
         </dependency>
     </dependencies>
    
