--- a/drombler-commons-data/drombler-commons-data-fx/pom.xml
+++ b/drombler-commons-data/drombler-commons-data-fx/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath>../../drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-data-fx</artifactId>
@@ -72,6 +72,18 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-fx-core</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <scope>provided</scope>
+            <version>${dependency.javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <scope>provided</scope>
+            <version>${dependency.javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
