--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-context/pom.xml
@@ -18,7 +18,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-fx-samples-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath>../drombler-commons-fx-samples-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-samples-context</artifactId>
@@ -83,20 +83,11 @@ Contributor(s): .
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.zenjava</groupId>
+                <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>jar</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>org.drombler.commons.fx.samples.context.ContextSampleApplication</mainClass>
-                            <updateExistingJar>true</updateExistingJar>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <mainClass>org.drombler.commons.fx.samples.context.ContextSampleApplication</mainClass>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-site-plugin</artifactId>
@@ -132,6 +123,16 @@ Contributor(s): .
             <groupId>${project.groupId}</groupId>
             <artifactId>drombler-commons-docking-fx-context</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${dependency.javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${dependency.javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
