--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
         <relativePath>drombler-commons-parent/pom.xml</relativePath>
     </parent>
     <artifactId>drombler-commons</artifactId>
@@ -75,7 +75,7 @@ Contributor(s): .
         <module>drombler-commons-fx</module>
         <module>drombler-commons-client</module>
         <module>drombler-commons-spring</module>
-        <module>drombler-commons-iso</module>
+        <module>drombler-commons-iso9660</module>
         <module>drombler-commons-docs</module>
     </modules>
     
