#172 Java 11: make sure Drombler FX works with Java SE 11 - revert main class

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-core/pom.xml
@@ -86,8 +86,8 @@ Contributor(s): .
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <configuration>
-                    <!--<mainClass>org.drombler.commons.fx.samples.fxml.FxmlSampleApplication</mainClass>-->
-                    <mainClass>org.drombler.commons.fx.samples.scene.control.treeview.facility.FacilityTreeViewSample</mainClass>
+                    <mainClass>org.drombler.commons.fx.samples.fxml.FxmlSampleApplication</mainClass>
+                    <!--<mainClass>org.drombler.commons.fx.samples.scene.control.treeview.facility.FacilityTreeViewSample</mainClass>-->
                 </configuration>
             </plugin>
             <plugin>
