#172 Java 11: make sure Drombler FX works with Java SE 11 - fixes

--- a/drombler-commons-spring/drombler-commons-spring-boot/pom.xml
+++ b/drombler-commons-spring/drombler-commons-spring-boot/pom.xml
@@ -49,8 +49,31 @@
                 <extensions>true</extensions>
             </plugin>         
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <configuration>
+                        <!-- detectLinks=true results in: Exit code: 1 - javadoc: error - Error fetching URL: https://projects.spring.io/spring-boot/#/spring-boot-parent/spring-boot/apidocs/ -->
+                        <detectLinks>false</detectLinks>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
-    
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <!-- detectLinks=true results in: Exit code: 1 - javadoc: error - Error fetching URL: https://projects.spring.io/spring-boot/#/spring-boot-parent/spring-boot/apidocs/ -->
+                    <!--<detectLinks>false</detectLinks>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
