--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -66,7 +66,7 @@ Contributor(s): .
         <distributionManagement.parent.url>${distributionManagement.base.url}/docs/site</distributionManagement.parent.url>
         <!-- URL to use with the GitHub site plugin -->
         <!--<distributionManagement.parent.url>${project.version}/docs/site</distributionManagement.parent.url>-->
-        <excludePackageNamesAggregate>${excludePackageNames}:*.maven.plugin.*:*.samples.*:org.drombler.commons.iso</excludePackageNamesAggregate>
+        <excludePackageNamesAggregate>${excludePackageNames}:*.maven.plugin.*:*.samples.*:org.drombler.commons.iso9660</excludePackageNamesAggregate>
         <!--<url.parent>https://www.drombler.org/drombler-commons/${project.version}/docs/site/</url.parent>-->
         
         <!-- Dependency Versions -->
